--- a/src/app/viewproucts/viewproucts.component.html
+++ b/src/app/viewproucts/viewproucts.component.html
@@ -13,7 +13,7 @@
    
    
     <tr *ngFor="let i of data">
-    <td></td>    
+    <td><img src={{i.image}} class="card-img-top" style="height:100px ;width: 150px;"></td>    
     <td>{{i.name}}</td>    
     <td>{{i.category}}</td>
     <td>{{i.description}}</td>
